Migrate stuff page to be home page
- I loved my bee, but I hate other homepages
  with something you have to click to enter.
  Takes time to load, confusing, etc. Bye bad UX!

--- a/styles.css
+++ b/styles.css
@@ -10,32 +10,7 @@ html {
   font-family: 'Orbitron', sans-serif;
 }
 
-.hb-landing-container {
-  display: flex;
-  justify-content: center;
-  height: 100%;
-  align-items: center;
-}
-
-.hb-landing-bee {
-  transition: all 0.1s ease-out;
-  -webkit-transition: all 0.1s ease-out;
-  height: 600px;
-  width: 600px;
-}
-
-.hb-landing-bee:hover {
-  cursor: pointer;
-}
-
-.hb-landing-bee.over {
-  -webkit-filter: drop-shadow(5px 5px 5px #222);
-  filter: drop-shadow(5px 5px 5px #222);
-  height: 625px;
-  width: 610px;
-}
-
-.hb-stuff-page, .hb-about-page {
+.hb-index, .hb-about-page {
   height: 100%;
   display: flex;
   justify-content: space-around;;
